# mxcurpy

./: .gitignore  LICENSE.txt  README.md  __init__.py  conf.py  index.rst  mxcurpy.py  pyproject.toml  setup.py  states.py  utilities.py
mxcurpy/: curp.py  non_convenient_words.py  rfc.py  states.py  utils.py
tests/: curp_test.py  mxcurpy.py  mxcurpy_test.py  rfc_test.py  states_test.py
