[tool.poetry]
name = "mxcurpy"
version = "0.1.0"
description = "Compute CURP and RFC for Mexican Citizens"
authors = ["Héctor Iván Patricio Moreno <hectorivanpatriciomoreno@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
