[tool.poetry]
authors = ["Héctor Iván Patricio Moreno <hectorivanpatriciomoreno@gmail.com>"]
description = "Compute CURP and RFC for Mexican Citizens"
homepage = "https://github.com/hectorip/mxcurpy"
keywords = ["curp", "mexico"]
license = "MIT"
name = "mxcurpy"
readme = "README.md"
version = "0.1.4"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
